kubernetes/apps/umami/umami-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: umami
  namespace: umami
spec:
  selector:
    app: umami
  ports:
    - name: http
      port: 80
      targetPort: 3000
