kubernetes/apps/umami/httproute-umami.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: umami
  namespace: umami
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: cloudflare-tunnel
      namespace: cloudflare-tunnel-system
      sectionName: https
  hostnames:
    - umami.alialjaffer.com
  rules:
    - backendRefs:
        - name: umami
          port: 80
