kubernetes/apps/umami/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: umami-default
  namespace: umami
spec:
  endpointSelector:
    matchLabels:
      app: umami
  ingress:
    # public traffic through the cloudflare-tunnel-gateway-controller proxy pods
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": cloudflare-tunnel-system
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: umami-db
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: umami-db-default
  namespace: umami
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: umami-db
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: umami
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": monitoring
      toPorts:
        - ports:
            - port: "9187"
              protocol: TCP
    # CNPG operator -> instance traffic (failover/backup orchestration)
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": cnpg-system
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: umami-db
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEntities:
        - kube-apiserver
